add try, catch for errors, and fix functionality

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,17 @@
 #playCard {
   display: none;
 }
-.end {
+#end {
+  display: none;
+}
+#feedMe {
+  display: none;
+}
+
+#starving {
+  display: none;
+}
+
+#error {
   display: none;
 }
